# synapse-avivator

./: .dockerignore  .gitignore  Dockerfile  README.md  demo.py  generate_offsets.py  proxy.py  pyproject.toml  requirements.txt
docs/: blog-post.md  slack-announcement.md
docs/superpowers/plans/: 2026-04-02-presigned-url-refresh-demo.md  2026-04-02-synapse-avivator-packaging.md
docs/superpowers/specs/: 2026-04-02-presigned-url-refresh-demo-design.md  2026-04-02-synapse-avivator-packaging-design.md
src/synapse_avivator/: __init__.py  __main__.py  auth.py  cli.py  proxy.py  refreshing_url.py
src/synapse_avivator/static/: index.html
src/synapse_avivator/static/viewer/: index.html
src/synapse_avivator/static/viewer/assets/: deflate-C2PgpHU8.js  deflate-DEtU_I7P.js  index-CNHS5_Ze.js  index-DwxqahIG.js  jpeg-BG5INNM1.js  jpeg-BT-8RL8i.js  lerc-ClxdoliQ.js  lerc-Dc722vaC.js  lzw-BnmlmmVO.js  lzw-Dlu4d-lD.js  packbits-CqWDOfYj.js  packbits-DIuEhZ6A.js  raw-C0ohE2La.js  raw-CSesUGJ9.js  webimage-BjRR1qgr.js  webimage-F07_VfX3.js
tests/: test_cli.py  test_demo.py  test_refreshing_url.py
